@@ -2091,30 +2091,31 @@ predict.gam <- function(object,newdata,type="link",se.fit=FALSE,terms=NULL,
   # get data from which to predict.....  
   nd.is.mf <- FALSE # need to flag if supplied newdata is already a model frame
   if (newdata.guaranteed==FALSE)
-  { if (missing(newdata)) # then "fake" an object suitable for prediction 
-    { newdata<-object$model
+  { if (missing(newdata)) { # then "fake" an object suitable for prediction 
+      newdata <- object$model
       new.data.ok <- FALSE
       nd.is.mf <- TRUE
-    }
-    else  # do an R ``standard'' evaluation to pick up data
-    { new.data.ok <- TRUE
-      if (is.data.frame(newdata)&&!is.null(attr(newdata,"terms"))) # it's a model frame
-      { if (sum(!(names(object$model)%in%names(newdata)))) stop(
+    } else {  # do an R ``standard'' evaluation to pick up data
+      new.data.ok <- TRUE
+      if (is.data.frame(newdata)&&!is.null(attr(newdata,"terms"))) { # it's a model frame
+        if (sum(!(names(object$model)%in%names(newdata)))) stop(
         "newdata is a model.frame: it should contain all required variables\n")
          nd.is.mf <- TRUE
-      } else
-      { ## Following is non-standard to allow convenient splitting into blocks
+      } else {
+        ## Following is non-standard to allow convenient splitting into blocks
         ## below, and to allow checking that all variables are in newdata ...
 
         ## get names of required variables, less response, but including offset variable
         Terms <- delete.response(terms(object))
         allNames <- all.vars(Terms)
-        ff <- reformulate(allNames)
-        if (sum(!(allNames%in%names(newdata)))) { 
-        warning("not all required variables have been supplied in  newdata!\n")}
-        ## note that `xlev' argument not used here, otherwise `as.factor' in 
-        ## formula can cause a problem ... levels reset later.
-        newdata <- eval(model.frame(ff,data=newdata,na.action=na.act),parent.frame()) 
+        if (length(allNames) > 0) { 
+          ff <- reformulate(allNames) 
+          if (sum(!(allNames%in%names(newdata)))) { 
+          warning("not all required variables have been supplied in  newdata!\n")}
+          ## note that `xlev' argument not used here, otherwise `as.factor' in 
+          ## formula can cause a problem ... levels reset later.
+          newdata <- eval(model.frame(ff,data=newdata,na.action=na.act),parent.frame()) 
+        } ## otherwise it's intecept only and newdata can be left alone
         na.act <- attr(newdata,"na.action")
       }
     }
